Fixing light mode on mobile and desktop

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -148,10 +148,11 @@ footer {
   }
 
   .pretty {
+    color: white;
     background-color: #696969;
     padding: 20px;
     border-radius: 20px;
-    box-shadow: 1px 1px 10px #555555 ;
+    box-shadow: 1px 1px 10px #555555;
   }
 
   .heading {
@@ -194,6 +195,7 @@ footer {
   }
 
   .pretty {
+    color: white;
     background-color: #696969;
     padding: 20px;
     border-radius: 20px;
